force-app/main/default/objects/MeetingLog__c/MeetingLog__c.object-meta.xml
<CustomObject>
    <label>회의록</label>
    <nameField>
        <label>Meeting Log Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>회의록</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>