force-app/main/default/objects/MeetingLog__c/fields/Contents__c.field-meta.xml
<CustomField>
    <fullName>Contents__c</fullName>
    <label>Meeting Log (Contents)</label>
    <type>TextArea</type>
</CustomField>