force-app/main/default/objects/MeetingLog__c/fields/EndAllDay__c.field-meta.xml
<CustomField>
    <fullName>EndAllDay__c</fullName>
    <formula>StartAllDay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End</label>
    <type>Date</type>
</CustomField>