force-app/main/default/objects/MeetingLog__c/fields/EndNotAllDay__c.field-meta.xml
<CustomField>
    <fullName>EndNotAllDay__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>