force-app/main/default/objects/MeetingLog__c/fields/InternalShareType__c.field-meta.xml
<CustomField>
    <fullName>InternalShareType__c</fullName>
    <label>Internal Share to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>My</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>