force-app/main/default/objects/MeetingLog__c/fields/IsAllDay__c.field-meta.xml
<CustomField>
    <fullName>IsAllDay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>종일 일정 여부</description>
    <label>All-day Event</label>
    <type>Checkbox</type>
</CustomField>