force-app/main/default/objects/MeetingLog__c/fields/SoldTo2__c.field-meta.xml
<CustomField>
    <fullName>SoldTo2__c</fullName>
    <formula>Task__r.AccountName__c</formula>
    <label>Sold to</label>
    <type>Text</type>
</CustomField>