force-app/main/default/objects/MeetingLog__c/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup 고객사</description>
    <label>Sold to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>회의록</relationshipLabel>
    <relationshipName>MeetingLog</relationshipName>
    <type>Lookup</type>
</CustomField>