force-app/main/default/objects/MeetingLog__c/fields/StartAllDay__c.field-meta.xml
<CustomField>
    <fullName>StartAllDay__c</fullName>
    <label>Start</label>
    <type>Date</type>
</CustomField>