force-app/main/default/objects/MeetingLog__c/fields/StartNotAllDay__c.field-meta.xml
<CustomField>
    <fullName>StartNotAllDay__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>