force-app/main/default/objects/MeetingLog__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Calendar__c</referenceTo>
    <relationshipLabel>회의록</relationshipLabel>
    <relationshipName>Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>